# traj-sim

./: CMakeLists.txt  LICENSE  README.md  main.cpp
DataLoading/: DataLoaderEuclidean.cpp  DataLoaderEuclidean.hpp  DataLoaderRoadNetwork.cpp  DataLoaderRoadNetwork.hpp
Datasets/: euclidean_sample.csv  rn_graph_sample.csv  rn_graph_sample_phl.txt  rn_sample.csv
DistCache/: DistCache.hpp
Experiments/: AbstractMeasure.hpp  BaselineAbstract.hpp  CombinedMeasuresExperiments.hpp  SimilarityAnalysis.cpp  SimilarityAnalysis.hpp
ModifiedSimMeasures/: CombinedSimilarityMeasures.hpp  DTWPathManager.hpp  ExperimentalEpsArrayVersions.hpp  ExperimentalVersions.hpp  HausdorffIndexManager.hpp  ModifiedDTW.hpp  ModifiedFrechet.hpp  ModifiedHausdorff.hpp  Ye_Who_Enter_Here.txt
SimMeasures/: DTW.hpp  DiscreteFrechet.hpp  EDR.hpp  ERP.hpp  Frechet.hpp  Hausdorff.hpp  LCSS.hpp
TrajModels/: EuclideanPoint2D.cpp  EuclideanPoint2D.hpp  EuclideanPoint3D.cpp  EuclideanPoint3D.hpp  FreeSpaceCell.cpp  FreeSpaceCell.hpp  RoadNetworkPoint.cpp  RoadNetworkPoint.hpp  Trajectory.hpp
Utils/: Bitmask.cpp  Bitmask.hpp  Utilities.cpp  Utilities.hpp
